--- a/sys/README
+++ b/sys/README
@@ -1,8 +1,10 @@
-# `/sys/`
+`/sys/`
+=======
 
 Kernel.
 
-## Structure
+Structure
+---------
 
 Source files are referred to without file extensions. Each source file can be
 in either `.c` or `.s` format, and both types may be present and linked
